Build command control added. Colors added.

--- a/build.conf
+++ b/build.conf
@@ -1,2 +1,6 @@
 IMPORTANT_BRANCHES=("main" "master")
 BUILD_COMMAND="mvn package"
+RED="\033[1;31m"
+YELLOW="\033[1;33m"
+GREEN="\033[1;32m"
+NC="\033[0m"
